@@ -835,6 +835,8 @@ name|String
 argument_list|>
 argument_list|()
 decl_stmt|;
+try|try
+block|{
 while|while
 condition|(
 name|qp
@@ -877,6 +879,57 @@ block|{
 break|break;
 block|}
 block|}
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|console
+operator|.
+name|printError
+argument_list|(
+literal|"Failed with exception "
+operator|+
+name|e
+operator|.
+name|getClass
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|":"
+operator|+
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|,
+literal|"\n"
+operator|+
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
+name|StringUtils
+operator|.
+name|stringifyException
+argument_list|(
+name|e
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ret
+operator|=
+literal|1
+expr_stmt|;
+block|}
 name|int
 name|cret
 init|=
@@ -885,10 +938,18 @@ operator|.
 name|close
 argument_list|()
 decl_stmt|;
+if|if
+condition|(
+name|ret
+operator|==
+literal|0
+condition|)
+block|{
 name|ret
 operator|=
 name|cret
 expr_stmt|;
+block|}
 name|long
 name|end
 init|=
