@@ -804,6 +804,8 @@ name|String
 argument_list|>
 name|res
 parameter_list|)
+throws|throws
+name|IOException
 block|{
 try|try
 block|{
@@ -945,44 +947,27 @@ return|;
 block|}
 catch|catch
 parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+throw|throw
+name|e
+throw|;
+block|}
+catch|catch
+parameter_list|(
 name|Exception
 name|e
 parameter_list|)
 block|{
-name|console
-operator|.
-name|printError
-argument_list|(
-literal|"Failed with exception "
-operator|+
-name|e
-operator|.
-name|getClass
-argument_list|()
-operator|.
-name|getName
-argument_list|()
-operator|+
-literal|":"
-operator|+
-name|e
-operator|.
-name|getMessage
-argument_list|()
-argument_list|,
-literal|"\n"
-operator|+
-name|StringUtils
-operator|.
-name|stringifyException
+throw|throw
+operator|new
+name|IOException
 argument_list|(
 name|e
 argument_list|)
-argument_list|)
-expr_stmt|;
-return|return
-literal|false
-return|;
+throw|;
 block|}
 block|}
 block|}
