@@ -381,6 +381,8 @@ name|String
 argument_list|>
 name|res
 parameter_list|)
+throws|throws
+name|IOException
 block|{
 assert|assert
 literal|false
