@@ -21,6 +21,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|List
@@ -751,6 +761,8 @@ name|String
 argument_list|>
 argument_list|()
 decl_stmt|;
+try|try
+block|{
 if|if
 condition|(
 name|driver
@@ -776,6 +788,24 @@ comment|// TODO: return null in some other way
 return|return
 literal|""
 return|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|HiveServerException
+argument_list|(
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+throw|;
+block|}
 block|}
 comment|/**      * Fetches numRows rows.      *      * @param numRows Number of rows to fetch.      * @return A list of rows. The size of the list is numRows if there are at least       *         numRows rows available to return. The size is smaller than numRows if      *         there aren't enough rows. The list will be empty if there is no more       *         row to fetch or numRows == 0.       * @throws HiveServerException Invalid value for numRows (numRows< 0)      */
 specifier|public
@@ -830,6 +860,8 @@ argument_list|(
 name|numRows
 argument_list|)
 expr_stmt|;
+try|try
+block|{
 name|driver
 operator|.
 name|getResults
@@ -837,6 +869,24 @@ argument_list|(
 name|result
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|HiveServerException
+argument_list|(
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+throw|;
+block|}
 return|return
 name|result
 return|;
@@ -880,6 +930,8 @@ name|String
 argument_list|>
 argument_list|()
 decl_stmt|;
+try|try
+block|{
 while|while
 condition|(
 name|driver
@@ -902,6 +954,24 @@ operator|.
 name|clear
 argument_list|()
 expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|HiveServerException
+argument_list|(
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+throw|;
 block|}
 return|return
 name|rows
